[gd_scene load_steps=3 format=3 uid="uid://bq0tfxrfw5ogm"]

[ext_resource type="Script" uid="uid://bi7eityjnl4gq" path="res://src/game/screens/ui/menus/MainMenu.gd" id="1_u5yd7"]
[ext_resource type="AudioStream" uid="uid://dxbhohteh5vhx" path="res://src/assets/sound/Investigationdiscovery - Feldup.mp3" id="2_2fuk6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5yd7")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -15.5
offset_right = 80.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Container"]
layout_mode = 2
text = "Play"

[node name="OptionButton" type="Button" parent="Container"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="Container"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_2fuk6")
autoplay = true
parameters/looping = false
